# lynx-investor-core

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: PUBLISHING.md
lynx_investor_core/: __init__.py  about.py  author_footer.py  backtest.py  charts.py  cli.py  easter.py  fetcher.py  gui_themes.py  i18n.py  lang_widget.py  logging.py  logo.py  models.py  news.py  openapi.py  pager.py  plugins.py  reports.py  screener.py  sector_gate.py  sector_registry.py  storage.py  themes.py  ticker.py  translations.py  urlsafe.py
lynx_investor_core/locales/es/LC_MESSAGES/: lynx.mo  lynx.po
tests/: test_backtest.py  test_charts.py  test_gui_themes.py  test_i18n.py  test_logging.py  test_lynx_theme.py  test_openapi.py  test_pager.py  test_plugins.py  test_screener.py  test_sector_gate.py  test_sector_registry.py  test_translations.py  test_urlsafe.py
