[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "lynx-investor-core"
version = "5.0"
description     = "Shared runtime for the Lince Investor suite (lynx-investor-* agents)"
readme          = "README.md"
license         = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
authors         = [{ name = "Borja Tarraso", email = "borja.tarraso@member.fsf.org" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "requests>=2.31",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "rich>=13.7",
    "textual>=0.60",
    "plotext>=5.2",
]

[project.urls]
Homepage = "https://github.com/borjatarraso/lynx-investor-core"
Issues   = "https://github.com/borjatarraso/lynx-investor-core/issues"

[tool.setuptools.packages.find]
include = ["lynx_investor_core*"]
