[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "lynx-investor-core"
version = "5.5.1"
description     = "Shared runtime for the Lince Investor suite (lynx-investor-* agents)"
readme          = "README.md"
license         = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
authors         = [{ name = "Borja Tarraso", email = "borja.tarraso@member.fsf.org" }]
keywords = ["finance", "investing", "fundamental-analysis", "core", "shared-runtime"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "requests>=2.31",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "rich>=13.7",
    "textual>=0.60",
    "plotext>=5.2",
]

[project.urls]
Homepage  = "https://github.com/borjatarraso/lynx-investor-core"
Repository = "https://github.com/borjatarraso/lynx-investor-core"
Issues    = "https://github.com/borjatarraso/lynx-investor-core/issues"
Changelog = "https://github.com/borjatarraso/lynx-investor-core/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["lynx_investor_core*"]

[tool.setuptools.package-data]
# Ship compiled and source gettext catalogs with the wheel so the runtime
# can locate them via ``lynx_investor_core.i18n.LOCALES_DIR``.
lynx_investor_core = ["locales/*/LC_MESSAGES/*.mo", "locales/*/LC_MESSAGES/*.po"]
